function nghiem thu

--- a/FormMain.resx
+++ b/FormMain.resx
@@ -406,6 +406,18 @@
   <metadata name="timerClock.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="btnNghiemthu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAHUAAAB1AePCB2UAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABOUlEQVQ4T42TSy4FQRhGmwkmEs+BiRUgJB6JsAPBNu7MzBqMJJ5hBdZggMSMMTZAxMhAPONxTqm+
+        6na6bpzk5Nb/VXX339V1ixrGcQev8TXqeBvHMEs37uEXfmf8xF10bQsGp+iiD3TRIvZFF2LmnGtOsAeb
+        7KMTDzhlkGEa79C1dhuYQNt+x0mDhLNoygy6L75O2BM3zDvaRRVzrXKI5m5s2GEL37NK7gbzaH5lYTsW
+        vRYJq2huq1X60blni5dYDFpABx6hmTquwy+hoQ0X2pZ04WO0gZ3YFjfCGzQ/C4ygbbZjDdcdeHTLzzhr
+        8A820Ic+hQp8usEtzhkknOMFDoTq7+I3XDYQj7IbUk4cYHkivdjc3804brm4pO7P5Kkbxpsk81VXMIvH
+        cwuPccgARvES73HJ4Jei+AFYFmMzDbxQrgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnCaidat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
@@ -420,7 +432,7 @@
   <data name="btnKhohang.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAJ
-        0gAACdIBnNRyQQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACiSURBVDhPYwCC
+        zwAACc8B3PAPGAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACiSURBVDhPYwCC
         m0BsCWIQAF5A/BiI/yPhe0AMZoSCGAQASPN6IAapBeFeIAbpJdoAdHUgNvUMADkHJIAPo6tD8QIlGEyA
         TCQVwFxFHQO+QWkQBkXXSiD+CuX/AeJDQCwBxMgAxQDk+AWxQWJlUH40ED8CYlCgIQMUA0AcGIBLIIFV
         UIwMqGsAtviF8UH4OBQjiw2idHADiInJzujAioGB4QYAXuhrJlde7MAAAAAASUVORK5CYII=
@@ -429,7 +441,7 @@
   <data name="btnNhapXuat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAJ
-        0gAACdIBnNRyQQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFgSURBVDhPndK9
+        zwAACc8B3PAPGAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFgSURBVDhPndK9
         K8VRHMfxw0DKYLmLpzIZpWtiMqCUGFBIJH+AMkjKRGFQhEEeyoTBpAwW5TEyKvIQyqhQCHl4f865R6df
         unV96pVzjt/ve7/nd44hmdjAI3q0kGpq8J3woIVUkwe9qALrWvhPclGNDDtzKcCwGyZPMfbwjE0UQqmA
         uiqysyTZxT4moReOkI4svKENShrK0Y8l1MHmHS1ohgp8ohHKAabc0L6k/99hGx/Ihx2EBVZwi1Vc4xiK
@@ -453,7 +465,7 @@
   <data name="btnTrangchinh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        dAAAAHQBMYXlgQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAD+SURBVDhPzdMx
+        cQAAAHEBHD+AdwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAD+SURBVDhPzdMx
         TgJRFIXhSyXRgppC3QFWWOgiTDQGrLCxF1iFrWvQhsSWCtwDIRRAwgKMvSEh6n/enSEvM0MyUnmSLzkw
         vMNAwMgSFyp/zCMmKj+4VcmkgprXXLr4hkYKB86wgq694RBpetBhjYRkB3T4E++4S/oIR+hDhzWyTTzQ
         gA6Mkb6rBj/whdxhJR54whDxLSt1POA8PDK7wbXX4u9AucTCay6DREg8EC/rOV0rys6B+EJ2IP697DWw
