--- a/f_Qccheck/FormQccheck.resx
+++ b/f_Qccheck/FormQccheck.resx
@@ -117,32 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="stt.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="lotno.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="soluong.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnHuybo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        cAAAAHABznhikwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACKSURBVDhPpZNR
-        CoAwDEN3CUXvfxPdn37ph8fRRCxU6briHgQ3aVLWsQQytEA9N0FYu0IzN1yc0A5FQljDWnrYOHXQ9vw4
-        oBEq8a0doJtISNEseCFVs2CFhM2CHhK/eh2+Kd013FljBXi386LpCNbArMGaeNOuhnhmoRgSMQtmSPNj
-        4pP885zhSdMFuIxRTXUtyt0AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnXacNhan.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        cAAAAHABznhikwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAB3SURBVDhPYxjS
-        gBmIOSBM0gFI8xIg3gjmkQhAmhcB8Q8g9gYJkAIGqWYDIFaCMLECWIB9B2I3kAA62APED4EYmyEENYOA
-        ABCfBuJHQKwMEoACkvyMbghZASYMxOeB+AUQnwBivM7GBUAu6QXiFUBsBhIY7ICBAQC6NRu3ERM90AAA
-        AABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEPSURBVDhPldM9SgNBGIfxLQIxlzDYKulsvIJEu9wgINam
+        EI9gaa0YYqp0HsBAFAQtPEFIo7XfgpX6PKu7DDrjkj/8YHc+3p192c3ICq7xhhM0kIpzQ7jWPcvIL86x
+        hQdcYpTgnGtce4ErZK8/A2aMKWKb5dwZzDYevfDYVnXzB9pIxTnXuNbNx8jfy6NZ/b/NRTZxhB3UHTDF
+        EcMUzX1CH+XiWGIFfje3h2RiBXxy2NzD78t4YgU8dtjcdSQTK+A7e2yfHG5exD4W8jvSwi3eMUA5kUgT
+        9zhFzYEbhM3aRVXW4Ad44M0zwmZ9zsFG/2nWHjoVunjBBGWzLLThQEX8cn3lOyw5MG9WMQO/cpZ9Afsf
+        Xk+vTMMcAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
